--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+div{
+    justify-content: center;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+h3{
+    color: black;
+    background-color: wheat;
+    text-align: center;
+  
+}
